--- a/src/accounts/templates/accounts/bad_signature.html
+++ b/src/accounts/templates/accounts/bad_signature.html
@@ -9,5 +9,5 @@
 {% endblock %}
 
 {% block content %}
-    <p>Your activation failed.You can <a href="{% url 'accounts:register' %}">register again.</a></p>
+    <p>Your activation failed.You can <a href="{% url 'accounts:again' %}">enter an email to send again.</a></p>
 {% endblock %}
