--- a/src/accounts/templates/accounts/Again.html
+++ b/src/accounts/templates/accounts/Again.html
@@ -3,11 +3,11 @@
 {% load crispy_forms_filters %}
 
 {% block title %}
-    Login
+    Create account
 {% endblock %}
 
 {% block header %}
-    Login page
+    Resending
 {% endblock %}
 
 {% block content %}
@@ -16,14 +16,10 @@
         <div class="col">
             <form method="post">
                 {% csrf_token %}
-                {{ form | crispy }}
-                <p>
-                    If you forgot your password, we can help you. Please click
-                    <a href="{% url 'password_reset' %}">me</a> to reset password.
-                </p>
+                {{ form|crispy }}
                 <div class="mt-3 text-center">
-                    <input class="btn btn-outline-primary" type="submit" value="Login">
-                    <a href="{% url 'accounts:register' %}" class="btn btn-outline-success">Register</a>
+                    <input class="btn btn-outline-primary" type="submit" value="Repeat">
+                    <a href="{% url 'accounts:login' %}" class="btn btn-outline-success">Login</a>
                 </div>
             </form>
         </div>
