--- a/src/templates/includes/header.html
+++ b/src/templates/includes/header.html
@@ -31,11 +31,12 @@
                             {% if user.is_authenticated %}
                                 <li><a class="dropdown-item" href="{% url 'accounts:profile' %}">Profile</a></li>
                                 <li><hr class="dropdown-divider"></li>
-{#                                <li><a class="dropdown-item" href="{% url 'password_change' %}">Change password</a></li>#}
+                                <li><a class="dropdown-item" href="{% url 'password_change' %}">Change password</a></li>
                                 <li><a class="dropdown-item" href="{% url 'accounts:logout' %}">Logout</a></li>
                             {% else %}
                                 <li><a class="dropdown-item" href="{% url 'accounts:login' %}">Login</a></li>
                                 <li><a class="dropdown-item" href="{% url 'accounts:register' %}">Register</a></li>
+                                <li><a class="dropdown-item" href="{% url 'password_reset' %}">Password change</a></li>
                             {% endif %}
                         </ul>
                     </li>
