--- a/src/quiz/templates/exams/question.html
+++ b/src/quiz/templates/exams/question.html
@@ -1,11 +1,21 @@
 {% extends 'base.html' %}
 
+{% load custom_filters custom_tags %}
+
 {% block title %}
     Question {{ question.order_num }}
 {% endblock %}
 
 {% block header %}
     {{ question.text }}
+{#    {% with question.order_num|add:-1|multi:100|dived:question.exam.q_count as level %}#}
+    {% expression '(%1 - 1) * 100 // %2' question.order_num question.exam.q_count as level %}
+    <div class="progress">
+        <div class="progress-bar" role="progressbar" aria-label="Example with label"
+             aria-valuenow="{{ level }}" aria-valuemin="0"
+             aria-valuemax="100" style="width: {{ level }}%">{{ level }}%</div>
+    </div>
+{#    {% endwith %}#}
 {% endblock %}
 
 {% block content %}
