--- a/src/quiz/templates/results/details.html
+++ b/src/quiz/templates/results/details.html
@@ -6,6 +6,11 @@
 
 {% block header %}
     Result for exam: "{{ result.exam.title }}"
+    <div class="progress">
+        <div class="progress-bar" role="progressbar" aria-label="Example with label"
+             aria-valuenow="100" aria-valuemin="0"
+             aria-valuemax="100" style="width: 100%">100%</div>
+    </div>
 {% endblock %}
 
 {% block content %}
@@ -34,8 +39,8 @@
               </table>
             </div>
         </div>
-{#        <div class="row">#}
-{#            <a class="btn btn-primary m-3" href="{% url 'quiz:details' uuid=result.exam.uuid %}">Вернуться к тесту</a>#}
-{#        </div>#}
+        <div class="row">
+            <a class="btn btn-primary m-3" href="{% url 'quiz:details' uuid=result.exam.uuid %}">Вернуться к тесту</a>
+        </div>
     </div>
 {% endblock %}
