--- a/src/quiz/templates/exams/details.html
+++ b/src/quiz/templates/exams/details.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% load custom_filters %}
+
 {% block title %}
     Details of exam
 {% endblock %}
@@ -67,14 +69,14 @@
                     <tr>
                         <td>{{ forloop.counter }}</td>
                         <td>{{ result.create_timestamp|date:'d-m-Y H:i' }}</td>  {# |date:'d-m-Y H:i' #}
-                        <td>HA</td>
+                        <td>{{ result.num_correct_answers|results:result.num_incorrect_answers }}</td>
                         <td>{{ result.get_state_display }}</td>
                         <td>
                             {% if result.state == result.STATE.NEW %}
                                 <a class="btn btn-outline-warning" href="{% url 'quiz:result_update' exam.uuid result.uuid %}">
                                     Continue
                                 </a>
-                                <a class="btn btn-outline-danger" href="#">
+                                <a class="btn btn-outline-danger" href="{% url 'quiz:del' exam.uuid result.uuid %}">
                                     Remove
                                 </a>
                             {% else %}
